# jobject

./: CMakeLists.txt  README.md  prompt.ini
src/: Accessor.cpp  Accessor.h  JObject.cpp  JObject.h  Utils.cpp  Utils.h
test/: macro_test.cpp  main.cpp
